--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ Build with Makefile (5%):
     - rm -f generate transform solve *.o
     - make
     - "[[ -e generate && -e transform && -e solve ]]"
+  after_script:
+    - curl https://pd2a.imslab.org/updateGrade?token=$TOKEN
   artifacts:
     paths:
       - solve
